# neura

./: .eslintrc  .gitignore  .prettierrc  README.md  package-lock.json  package.json  shrinkwrap.yaml  tsconfig.json
backend/: main.py
data/: main.sqlite  sample.txt
python/: main.py  pyproject.toml
src/: database.ts  index.ts  log.ts
src/commands/: config.ts  generate.ts  help.ts  reload.ts
src/config/: constants.ts  log.ts
src/core/: commands.ts  index.ts  startPython.ts  web.ts
src/middlewares/: command.ts  counter.ts  filter.ts  index.ts  log.ts  mention.ts  payload.ts
src/models/: Channel.ts  Command.ts  ErrorEmbed.ts  Guild.ts  SuccessEmbed.ts
src/utils/: getDefaultChannel.ts
