[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["jarvis394 <tarnatovski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
"mc.py" = "^3.1.1"
pika = "^1.1.0"
redis = "^3.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

